example/lib/src/l10n/errors/app_es.arb
{
  "@@locale": "es",
  "error": "Ocurrió un error",
  "@error": {
    "description": "Ошибка"
  },
  "unexpectedError": "Ocurrió un error inesperado",
  "@unexpectedError": {
    "description": "Произошла какая то ошибка"
  },
  "bugReportSentText": "Informe de error enviado con éxito.",
  "@bugReportSentText": {
    "description": "Сообщение об успешной отправке баг репорта"
  }
}